--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "jl-cvs",
+    "name": "@jl-org/cvs",
     "version": "0.0.1",
     "description": "利用 Canvas 创造令人惊叹的效果",
     "main": "dist/index.cjs",
