--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "CJL",
   "license": "MIT",
   "devDependencies": {
+    "@jl-org/ts-tool": "^0.0.8",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
