使用外部依赖简化代码

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://github.com/beixiyo/jl-cvs"
+  "homepage": "https://github.com/beixiyo/jl-cvs",
+  "dependencies": {
+    "@jl-org/tool": "^1.7.87"
+  }
 }
