--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@types/node": "^20.11.20",
     "rollup": "^4.12.0",
     "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-typescript2": "^0.36.0",
     "tsc-alias": "^1.8.8",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "publishConfig": {
     "access": "public"
