--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "type": "module",
-  "types": "dist/typings/index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "/dist"
   ],
   "exports": {
     "import": {
-      "types": "./dist/typings/index.d.ts",
+      "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     }
   },
   "scripts": {
-    "build": "rollup -c && tsc-alias",
+    "build": "vite build",
     "test": "pnpm -C ./test dev"
   },
   "keywords": [
@@ -28,16 +28,9 @@
   "license": "MIT",
   "devDependencies": {
     "@jl-org/ts-tool": "^0.0.8",
-    "@rollup/plugin-alias": "^5.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.11.20",
-    "rollup": "^4.12.0",
-    "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "tsc-alias": "^1.8.8",
-    "typescript": "^5.7.2"
+    "vite": "^5.1.5",
+    "vite-plugin-dts": "^4.3.0"
   },
   "publishConfig": {
     "access": "public"
