--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "lib": [
       "ESNext",
       "DOM",
@@ -16,7 +16,7 @@
     },
     "outDir": "dist",
     "declaration": true,
-    "declarationDir": "./dist/typings",
+    "declarationDir": "./dist",
     "emitDeclarationOnly": true,
     "strict": true,
     "skipLibCheck": true
