--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "/dist"
   ],
   "exports": {
+    "require": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.cjs"
+    },
     "import": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
