--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "pnpm --filter @jl-org/cvs build",
     "build:test": "pnpm --filter test-page build",
+    "clean": "pnpm --filter @jl-org/cvs clean",
     "test": "pnpm --filter test-page dev",
     "lint": "pnpm --filter @jl-org/cvs lint && pnpm --filter test-page lint"
   },
